--- a/main.html
+++ b/main.html
@@ -23,7 +23,17 @@
                 
             </select>
         </div>
-
+        <div id="pokemondiv">
+            <div>
+                <p>Pokémon 1</p>
+            </div>
+            <div>
+                <p>Pokémon 2</p>
+            </div>
+            <div>
+                <p>Pokémon 3</p>
+            </div>
+        </div>
 
 
         
